[project]
name = "jcpao-court-directory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "psycopg[binary,pool]>=3.2.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.51.0",
]
